kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wapgo-svc
  namespace: default
  labels:
    app: wapgo
spec:
  selector:
    app: wapgo
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
